welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:16: error: value getCouleurSol is not a member of Boolean
    while(!estSurBiscuit() getCouleurSol()!=Color.GREEN){
                           ^